--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,28 +9,12 @@
     "project": "tsconfig.json",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "jest"],
-  "ignorePatterns": ["/packages/*/dist/"],
+  "plugins": ["@typescript-eslint"],
+  "ignorePatterns": ["dist"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:jest/recommended",
-    "prettier",
-    "prettier/@typescript-eslint"
-  ],
-  "rules": {
-    "no-use-before-define": [
-      "error",
-      {
-        "functions": false
-      }
-    ],
-    "@typescript-eslint/no-use-before-define": [
-      "error",
-      {
-        "functions": false
-      }
-    ]
-  }
+    "prettier"
+  ]
 }
