--- a/package.json
+++ b/package.json
@@ -10,20 +10,17 @@
     "clean": "rimraf coverage build tmp",
     "build": "tsc -p tsconfig.release.json && tsc -p tsconfig.cjs.json",
     "build:watch": "tsc -w -p tsconfig.release.json",
-    "lint": "eslint . --ext .ts",
-    "test": "jest --coverage --forceExit --detectOpenHandles",
-    "test:watch": "jest --watch"
+    "lint": "eslint . --ext .ts"
   },
   "license": "Apache-2.0",
   "dependencies": {
     "zod": "3.20.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
     "eslint": "8.32.0",
     "eslint-config-prettier": "8.6.0",
-    "eslint-plugin-jest": "27.2.1",
     "typescript": "4.9.4",
     "prettier": "2.8.3"
   },
