--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "form-plugin-contract",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha",
   "author": "Nintex",
   "description": "Nintex Forms Plugin Contract",
   "main": "dist/cjs/index.js",
@@ -14,7 +14,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "zod": "3.20.2"
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.48.2",
