--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "form-plugin-contract",
+  "name": "@nintex/form-plugin-contract",
   "version": "1.0.0-alpha",
   "author": "Nintex",
   "description": "Nintex Forms Plugin Contract",
