--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Archive dist artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: dist-folder
+          name: dist
           path: |
             dist
 
@@ -36,7 +36,7 @@ jobs:
       - name: Download dist files
         uses: actions/download-artifact@v3
         with:
-          name: dist-folder
+          name: dist
       - run: npm ci
       - run: npm publish --access public
         env:
